typescript/checker/tests/conformance/expressions/typeGuards/typeGuardRedundancy.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            5,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardRedundancy.ts:1:5
  |
1 | var x: string|number;
  |     ^

